<resources>
    <string name="app_name">RSS Reader</string>

    <string name="title_activity_item_view">Articles</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Article Details</string>

    <!-- Strings used for fragments for navigation -->

    <!-- Preference Titles -->
    <string name="theme_header">Theme</string>
    <string name="sync_header">Sync</string>

    <!-- Theme Preferences -->
    <string name="dark_mode_title">Dark mode</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="auto_dark_mode_summary">Automatically switch to dark mode based on the time of the day</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync feeds periodically</string>
    <string name="sync_summary_on">Automatically update feeds in background</string>
    <string name="sync_summary_off">Do not automatically update feeds in background</string>
    <string name="sync_interval_title">Sync Interval</string>
    <string name="sync_enabled_title">Sync only between specific times</string>
    <string name="sync_within_hours_summary_on">Feeds will still get updated outside of selected time period.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="NAME_PLACEHOLDER">NAME_PLACEHOLDER</string>
    <string name="LINK_PLACEHOLDER">LINK_PLACEHOLDER</string>
    <string name="feed_delete_alert">Do you really want to delete this feed?</string>
    <string name="warning">Warning!</string>
    <string name="yes">Yes</string>
    <string name="feed_deleted">Feed deleted!</string>
    <string name="no">No</string>
    <string name="fill_in_fields">Please fill in the fields…</string>
    <string name="invalid_url">Invalid URL!</string>
    <string name="feed_saved">Feed saved!</string>
    <string name="feed_not_available">Feed not available!</string>
    <string name="updating_feeds">Updating feeds!</string>
    <string name="generic_placeholder">PLACEHOLDER</string>
    <string name="feed_updated">Feed updated!</string>
    <string name="error_while_updating_feed">Error while updating feed!</string>
    <string name="tips">Tips</string>
    <string name="help_dialog_content_list_view">• Tap and hold on a feed to delete it\n\n• Swipe down on lists to update them</string>
    <string name="help_dialog_content_new_feed">• Make sure your feed url points to a valid RSS XML</string>
    <string name="OK">OK</string>
    <string name="visit_website">Visit website</string>
    <string name="hours_ago_placeholder">3 hours ago</string>
    <string name="item_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="item_title_placeholder">Item Title</string>
    <string name="choose_an_article_to_see_the_details">Choose an article to see the details…</string>
    <string name="no_feeds_found">No feeds available yet.</string>
    <string name="feed_name_hint">Feed Name…</string>
    <string name="feed_url_hint">Feed URL…</string>
    <string name="save">Save</string>
    <string name="add_a_new_feed">Add a new feed:</string>
    <string name="pme_sose_2020">PME SoSe 2020</string>
    <string name="feed_list_title">Feed List</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="help">Help</string>
    <string name="yigitcan_alanyali">Yigitcan Alanyali</string>
    <string name="andy_schleising">Andy Schleising</string>
    <string name="wassem_alaashor">Wassem Alaashor</string>
    <string name="mustapha_lahmidi">Mustapha Lahmidi</string>
    <string name="cancel">Cancel</string>
    <string name="mute_only">Mute only</string>
    <string name="small_interval_warning">This option exists only for testing purposes.\n\nAndroid restricts background activities with intervals less than 10 minutes.\n\nIf the device\'s screen is off, the feeds will only be able to get updated every 10 minutes.</string>


</resources>